[package]
name = "lol_skin_randomizer"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "*"
fltk-evented = "*"
fltk-theme = "*"
windows-sys = { version = "*", features = [
    "Win32_Graphics_Dwm",
    "Win32_Foundation",
] }
serde = { version = "*", features = ["derive"] }
regex = "*"
reqwest = { version = "*", features = ["blocking"] }
base64 = "*"
serde_json = "*"
rand = "*"

[target.'cfg(windows)'.build-dependencies]
winres = "*"

[[bin]]
name = "Skin-Randomizer"
path = "src/main.rs"
